--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ University of Massachusetts Boston
 Winter 2013</p>
 
 <div class="alert alert-info" style="overflow:hidden; color:black; font-weight:bold;" >
-  <img src="img/cover2011_onepageF.png" alt="cover of 2011 statedata book" style="float:left; padding-right:2em;" />
+  <img src="http://www.statedata.info/statedatabook/img/thumb_bluebook.png" alt="cover of 2012 statedata book" style="float:left; padding-right:2em;" />
   <p style="padding-top: 2em;">The StateData employment report is a product of Access to Integrated Employment, a project of the Institute for Community Inclusion (ICI) at the University of Massachusetts Boston, supported in part by the Administration on Developmental Disabilities, U.S. Department of Health and Human Services, under cooperative agreement #90DN0216. The opinions contained in this report are those of the grantee and do not necessarily reflect those of the funders.</p>
 <p>
     <a href="img/statedata2011_Fweb.pdf" class="btn btn-primary btn-large">
