--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ h2 {padding-top: 50px;}
 .navbar-inverse .navbar-nav>li>a  {color:white;}
 .navbar-inverse .navbar-nav>li>a:hover  {color:yellow;}
 .navbar-inverse .navbar-brand { color:white;}
+
+li {padding-bottom: 1em;}
 </style>
   </head>
   <body>
