final text descriptions

--- a/index.html
+++ b/index.html
@@ -4596,6 +4596,23 @@ Figure 8 is a bar chart that displays percentage of SSI recipients who work by a
 <p><strong>Figure 9. Estimated Educational Attainment and Employment Participation (2010 ACS)</strong></p>
 <img src="images/figure9.png" alt="Figure 9. Estimated Educational Attainment and Employment Participation (2010 ACS)" /></p>
 
+<button class="btn btn-info" data-toggle="collapse" data-target="#fig9">
+Figure 9 Text Description
+</button>
+<div id="fig9" class="collapse "> 
+<div class="alert alert-info">
+<strong>Figure 9</strong>
+<p>
+Figure 9, titled Estimated Educational Attainment and Employment Participation (2010ACS), is 2 bar graphs side by side. One is displaying percent employed by age range and four disability populations.  For the 16-21 age range, the following employment data is displayed: No Disability: 37%; All disabilities: 22.3%; Cognitive Disability: 18.5%; Cognitive Disability and receives SSI: 8.7%. For the 22-30 age range, the following employment data is displayed: No Disability: 73.3%; All disabilities: 39.5%; Cognitive Disability: 32.7%; Cognitive Disability and receives SSI: 15.7%.
+</p>
+<p>
+The second bar graph is displaying percent with at least a high school diploma or GED by age range and four disability populations.  For the 16-21 age range, the following education data is displayed: No Disability: 57%; All disabilities: 44%; Cognitive Disability: 40%; Cognitive Disability and receives SSI: 33%. For the 22-30 age range, the following education data is displayed: No Disability: 89%; All disabilities: 77%; Cognitive Disability: 73%; Cognitive Disability and receives SSI: 67%. 
+
+</p> 
+</div>
+</div>
+
+
 <p>Among those who were working, average annual earnings were also substantially lower for youth and young adults with cognitive disabilities (Figure 10). Among high-school/college-age youth (ages 16-21), earnings were nearly $2,000 lower for those with cognitive disabilities. The gap increases with age, with a $13,000 gap in earnings for 22- to 30-year-olds.</p>
 
 <p>The gap in earnings is partly reflective of lower hours worked per week. Both wages and hours for youth and young adults with cognitive disabilities receiving SSI were very low, which likely reflects both the low employment levels of this group overall and the desire to keep wages below the Substantial Gainful Activity level at which benefits can be affected ($12,000 in 2010).</p>
@@ -4603,6 +4620,19 @@ Figure 8 is a bar chart that displays percentage of SSI recipients who work by a
 <p><strong>Figure 10. Average Earnings and Hours (2010 ACS)</strong></p>
 <img src="images/figure10.png" alt="Figure 10. Average Earnings and Hours (2010 ACS)
 " /></p>
+<button class="btn btn-info" data-toggle="collapse" data-target="#fig10">
+Figure 10 Text Description
+</button>
+<div id="fig10" class="collapse "> 
+<div class="alert alert-info">
+<strong>Figure 10</strong>
+<p>
+Figure 10, titled Average Earnings and Hours (2010 ACS), is 2 bar graphs side by side. One is displaying average annual earnings by age range and four disability populations.  For the 16-21 age range, the following earnings data is displayed: No Disability: $7,218; All disabilities: $6,020; Cognitive Disability: $5,336; Cognitive Disability and receives SSI: $3,644. For the 22-30 age range, the following earnings data is displayed: No Disability: $26,813; All disabilities: $17,527; Cognitive Disability: $15,070; Cognitive Disability and receives SSI: $6,989.</p>
+<p>
+The second bar graph is displaying average hours worked per week by age range and four disability populations.  For the 16-21 age range, the following hours worked per week data is displayed: No Disability: 25.5; All disabilities: 24.4; Cognitive Disability: 23.5; Cognitive Disability and receives SSI: 18.2. For the 22-30 age range, the following hours worked per week data is displayed: No Disability: 37.6; All disabilities: 33.6; Cognitive Disability: 31.6; Cognitive Disability and receives SSI: 20.6.
+</p> 
+</div>
+</div>
 
 <h3>Trends in outcomes for youth and young adults with IDD reflect overall economic and societal trends.</h3>
 
@@ -5118,7 +5148,17 @@ Figure 8 is a bar chart that displays percentage of SSI recipients who work by a
 <p><strong>Figure 11. Decrease in  Employment Rate: 2008-2010 (ACS Data)</strong></p>
 <p>
 <img src="images/figure11.png" alt="Figure 11. Decrease in  Employment Rate: 2008-2010 (ACS Data)" /></p>
-
+<button class="btn btn-info" data-toggle="collapse" data-target="#fig11">
+Figure 11 Text Description
+</button>
+<div id="fig11" class="collapse "> 
+<div class="alert alert-info">
+<strong>Figure 11</strong>
+<p>
+Figure 11, titled Decrease in Employment Rate: 2008-2010 (ACS Data), is a bar graph that displays decreases in employment rates from 2008-2010 by age range and four disability populations.  For the 16-21 age range, the following employment data is displayed: No Disability: 18%; All disabilities: 22%; Cognitive Disability: 26%; Cognitive Disability and receives SSI: 16%. For the 22-30 age range, the following employment data is displayed: No Disability: 7%; All disabilities: 16%; Cognitive Disability: 17%; Cognitive Disability and receives SSI: 11%.
+</p> 
+</div>
+</div>
 <p>Measures of economic status also reflected larger trends, particularly the economic recession. In the RSA-911 data, there has been a decrease over the past decade in the percentage of individuals relying on personal income as their primary source of support, both at intake and at closure (Table 15). Correspondingly, the percentage relying on family and friends as a primary source of support has risen over the same time period.</p>
 
 <table class="table table-bordered table-hover" class="data" summary="Table 15. Income Sources, VR Case Closures: Ages 16-30 (RSA-911 Data)">
@@ -6896,7 +6936,17 @@ Figure 8 is a bar chart that displays percentage of SSI recipients who work by a
 <p><strong>Figure 12. Percentage of Closures with ID:  2000-2010 (RSA-911)</strong></p>
 <p>
 <img src="images/figure12.png" alt="Figure 12. Percentage of Closures with ID:  2000-2010 (RSA-911)" /></p>
-
+<button class="btn btn-info" data-toggle="collapse" data-target="#fig12">
+Figure 12 Text Description
+</button>
+<div id="fig12" class="collapse "> 
+<div class="alert alert-info">
+<strong>Figure 12</strong>
+<p>
+Figure 12, titled Percentage of Closures with ID: 2000-2010 (RSA-911), is a bar chart that displays percentage of closures with ID for years 2002, 2004, 2006, 2008, and 2010. For the 16-21 age group, the percentages are as follows: 19% in 2002, 17.6% in 2004, 17.9% in 2006, 16.5% in 2008, and 14.9% in 2010.  For the 22-30 age group, the percentages are as follows: 11% in 2002, 10.6% in 2004, 11.4% in 2006, 11.4% in 2008, and 10.3% in 2010.  
+</p> 
+</div>
+</div>
 <h3>Youth and young adults in the IDD system</h3>
 
 <p>The ICI's 2012 National Survey of Day and Employment Services included a topical module on services and outcomes for youth and young adults. The questions in this module focused on numbers served, as well as policies, services, initiatives, and collaboration with other agencies. The survey module data were collected from 44 states and the District of Columbia.</p>
